--- a/templates/page1.html
+++ b/templates/page1.html
@@ -11,7 +11,7 @@
     <div class="container">
   <h2>Form Validation</h2>
   <p>In this example, we use <code>.was-validated</code> to indicate what's missing before submitting the form:</p>
-  <form action="/response" class="was-validated">
+  <form action="/r" class="was-validated">
       <!-- Height -->
     <div class="form-group">
       <label for="Height">What is your height?:</label>
