--- a/templates/home.html
+++ b/templates/home.html
@@ -7,4 +7,6 @@
 {% block content %}
     <!--page content-->
     <h1>Home Page</h1>
+    <img src = "../static\images\maxresdefault.jpg">
+    <img src = "../static\images\bxgvu4abuegq6mlvslf7.jpg">
 {% endblock %}
