--- a/templates/home.html
+++ b/templates/home.html
@@ -9,4 +9,8 @@
     <h1>Home Page</h1>
     <img src = "../static\images\maxresdefault.jpg">
     <img src = "../static\images\bxgvu4abuegq6mlvslf7.jpg">
+    <img src = "../static\images\maxresdefault (1).jpg">
+    <img src = "../static\images\most-difficult-handstand.jpg">
+    <img src = "../static\images\PULL-PUSH-SQUAT-CORE-JPG-1080-1024x576.jpg"><!-- Image of some basic exercises -->
+    <img src = "../static\images\shutterstock_1457601791_1600x.jpg">
 {% endblock %}
