--- a/templates/response.html
+++ b/templates/response.html
@@ -28,5 +28,37 @@
     <p>{{ response21 }}</p>
     <p>{{ response22 }}</p>
     <p>{{ response23 }}</p>
+
+
+    <p>{{ vairable1 }}</p>
+    <p>{{ vairable2 }}</p>
+    <p>{{ vairable3 }}</p>
+    <p>{{ vairable4 }}</p>
+    <p>{{ vairable5 }}</p>
+    <p>{{ vairable6 }}</p>
+    <p>{{ vairable7 }}</p>
+    <p>{{ vairable8 }}</p>
+    <p>{{ vairable9 }}</p>
+    <p>{{ vairable10 }}</p>
+    <p>{{ vairable11 }}</p>
+    <p>{{ vairable12 }}</p>
+    <p>{{ vairable13 }}</p>
+    <p>{{ vairable14 }}</p>
+    <p>{{ vairable15 }}</p>
+    <p>{{ vairable16 }}</p>
+    <p>{{ vairable17 }}</p>
+    <p>{{ vairable18 }}</p>
+    <p>{{ vairable19 }}</p>
+    <p>{{ vairable20 }}</p>
+    <p>{{ vairable21 }}</p>
+    <p>{{ vairable22 }}</p>
+
+
+
+    <p>{{ different1 }}</p>
+
+
+
+
   </body>
 </html>
