--- a/templates/page1.html
+++ b/templates/page1.html
@@ -22,21 +22,21 @@
       <!-- Height -->
     <div class="form-group">
       <label for="Height">What is your height?:</label>
-      <input type="number" class="form-control" id="height" placeholder="Enter height(in)" name="Height" required>
+      <input type="number" min="24" max="96" class="form-control" id="height" placeholder="Enter height(in)" name="Height" required>
       <div class="valid-feedback">Valid.</div>
       <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <!-- Weight -->
     <div class="form-group">
       <label for="Weight">What is you weight?:</label>
-      <input type="number" class="form-control" id="weight" placeholder="Enter weight (lbs)" name="Weight" required>
+      <input type="number" min="60" max="300" class="form-control" id="weight" placeholder="Enter weight (lbs)" name="Weight" required>
       <div class="valid-feedback">Valid.</div>
       <div class="invalid-feedback">Please fill out this field.</div>
     </div>
     <!-- age -->
     <div class="form-group">
         <label for="Age">What is yor age?:</label>
-        <input type="number" class="form-control" id="age" placeholder="Enter your age" name="Age" required>
+        <input type="number" min="10" max="90" class="form-control" id="age" placeholder="Enter your age" name="Age" required>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
