--- a/templates/response.html
+++ b/templates/response.html
@@ -6,59 +6,7 @@
   <body>
     <h1>Response:</h1>
     <p>{{ response1 }}</p>
-    <p>{{ response2 }}</p>
-    <p>{{ response3 }}</p>
-    <p>{{ response4 }}</p>
-    <p>{{ response5 }}</p>
-    <p>{{ response6 }}</p>
-    <p>{{ response7 }}</p>
-    <p>{{ response8 }}</p>
-    <p>{{ response9 }}</p>
-    <p>{{ response10 }}</p>
-    <p>{{ response11 }}</p>
-    <p>{{ response12 }}</p>
-    <p>{{ response13 }}</p>
-    <p>{{ response14 }}</p>
-    <p>{{ response15 }}</p>
-    <p>{{ response16 }}</p>
-    <p>{{ response17 }}</p>
-    <p>{{ response18 }}</p>
-    <p>{{ response19 }}</p>
-    <p>{{ response20 }}</p>
-    <p>{{ response21 }}</p>
-    <p>{{ response22 }}</p>
-    <p>{{ response23 }}</p>
-
-
-    <p>{{ vairable1 }}</p>
-    <p>{{ vairable2 }}</p>
-    <p>{{ vairable3 }}</p>
-    <p>{{ vairable4 }}</p>
-    <p>{{ vairable5 }}</p>
-    <p>{{ vairable6 }}</p>
-    <p>{{ vairable7 }}</p>
-    <p>{{ vairable8 }}</p>
-    <p>{{ vairable9 }}</p>
-    <p>{{ vairable10 }}</p>
-    <p>{{ vairable11 }}</p>
-    <p>{{ vairable12 }}</p>
-    <p>{{ vairable13 }}</p>
-    <p>{{ vairable14 }}</p>
-    <p>{{ vairable15 }}</p>
-    <p>{{ vairable16 }}</p>
-    <p>{{ vairable17 }}</p>
-    <p>{{ vairable18 }}</p>
-    <p>{{ vairable19 }}</p>
-    <p>{{ vairable20 }}</p>
-    <p>{{ vairable21 }}</p>
-    <p>{{ vairable22 }}</p>
-
-
-
-    <p>{{ different1 }}</p>
-    
-
-
+    <p>{{ instructions }}</p>
 
   </body>
 </html>
